# equation-site-project

./: README.md  TODO.md  docker-compose.yml
backend/: Cargo.toml  NOTES.md
backend/src/: main.rs  models.rs  search.rs  utils.rs  web_models.rs
backend/src/database/: db.rs  db_trait.rs  mod.rs  mongo_db.rs
backend/src/routes/equations/: create.rs  edit.rs  mod.rs  one.rs  search.rs
backend/src/routes/users/: create.rs  info.rs  login.rs  logout.rs  mod.rs
docs/: api.md  equation-example.md
esdoc/: README.md  package.json  tsconfig.json
esdoc/src/: components.ts  document.ts  main.ts  models.ts  parser.ts
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Home.tsx  SearchBar.tsx  SearchPage.tsx  SiteHeader.tsx  StateManager.ts  api.ts  header.tsx  home.tsx  index.tsx  root.css  router.tsx  searchPage.tsx  utils.ts
go-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  checklist.md  go.mod  go.sum  main.go
go-backend/db_impl/: MemoryDb.go  (+1 more)
host/: eqs-backend.nginx.conf  eqs-backend.service
legacy-esdoc/: README.md  package.json
rust-backend/: .env.sample  .gitignore  Cargo.toml  Dockerfile  prepare.sql
rust-backend/src/: char_generation.rs  cookie.rs  date_helper.rs  main.rs  models.rs  response_helper.rs  search.rs  utils.rs
rust-backend/src/database/: db.rs  mod.rs  mongo_db.rs  sqlite.rs
rust-backend/src/routes/: mod.rs
rust-backend/src/routes/equations/: create.rs  edit.rs  one.rs  search.rs
rust-backend/src/routes/users/: create.rs  info.rs  login.rs  logout.rs  mod.rs
(+46 files in other folders)
