[package]
name = "equation-site-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.0.0"
bcrypt = "0.12"
openssl = "0.10.38"
